--- a/footpages/about.html
+++ b/footpages/about.html
@@ -29,21 +29,22 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container" id="nav">
         <a class="navbar-brand" href="../postspage/index.html" style="margin-left: 2%;"><img
-            src="../images/snapik2 (2).png" style="height: 60px;">PostSense</a>
+                src="../images/snapik2 (2).png" style="height: 60px;">PostSense</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="../postspage/index.html">Post Feed</a>
+                <a class="nav-item nav-link active" href="../index.html">Home</a>
 
             </div>
         </div>
 
         <form class="form-inline d-flex" role="search">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-sm my-2 my-sm-0" type="submit" style="margin-right: 10%; color: white;" >Search</button>
+            <button class="btn btn-sm my-2 my-sm-0" type="submit"
+                style="margin-right: 10%; color: white;">Search</button>
         </form>
 
         <button class="btn btn-sm btn-outline-primary my-2 my-sm-0" type="submit" style="margin-right: 2%;"
@@ -52,13 +53,73 @@
 
     </nav>
 
-    <div class="d-flex justify-content-center container"><img src="../images/sm1.jpg" style="width: 500px;"></div>
+    <div class="container">
+        <p>
+        <h2> About PostSense </h2> <br>
+
+        <b>Overview: </b><br>
+        PostSense is a dynamic microblogging platform designed for users to share short-form content and engage in
+        real-time discussions. Whether you're sharing thoughts, photos, videos, or links, [Microblogging Platform Name]
+        empowers users to express themselves and connect with others in a concise and meaningful way. <br><br>
+
+        <b>b>Key Features:</b><br>
+
+        <b>Microblogging: </b><br>Post short updates, thoughts, or observations in 280 characters or less. Express yourself
+        succinctly and creatively.<br><br>
+
+        <b>Visual Sharing:</b><br> Share photos, GIFs, and short videos to complement your posts and capture moments in real-time.<br><br>
+
+        <b>eal-time Updates:</b> <br>Stay connected with instant updates from people you follow. See what's happening as it
+        unfolds.<br><br>
+
+        <b> Hashtags and Trends:</b><br> Discover and participate in trending topics with hashtags. Explore diverse interests and
+        join relevant conversations.<br><br>
+
+        <b> Engagement:</b> <br>Like, comment, and reshare posts to interact with others. Foster meaningful discussions and
+        connections.<br><br>
+
+        <b>Privacy and Control:</b><br> Customize your privacy settings to control who can see your posts and interact with you.
+        Protect your information and enjoy a safe environment. <br><br>
+
+        <b> Notifications:</b> <br>Receive notifications for likes, comments, and mentions to stay updated on interactions and
+        engagement.<br><br>
+
+        <b> Discover and Explore: </b></b><br>Explore curated content and discover new users and topics based on your interests. Expand
+        your network and connect with like-minded individuals.<br><br>
+
+        <b> Accessibility: </b><br>Ensure inclusivity with accessibility features for all users, including screen reader
+        compatibility and adjustable text size.<br><br>
+
+        <b>  Community Guidelines: </b><br>Uphold a respectful and positive community environment with clear guidelines against
+        harassment, hate speech, and inappropriate content. Report and address violations promptly.<br><br>
+
+        <b>  Mission Statement:</b><br>
+        At PostSense, our mission is to empower individuals to share their voices, connect authentically, and spark
+        meaningful conversations. We believe in the power of concise communication and the value of diverse perspectives
+        in fostering a vibrant community.<br><br>
+
+        <b>Contact Us:</b><br>
+        For inquiries, support, or feedback, please contact our support team at [Contact Information]. Follow us on
+        [Social Media Handles] for updates and announcements.<br><br>
+
+        <b> Join PostSense Today:</b><br>
+        Discover the simplicity and impact of microblogging. Join PostSense today and start sharing your world, one
+        brief moment at a time.
+
+        </p>
+
+    </div>
+
+
 
     <footer class="py-3 my-4" id="footer">
         <ul class="nav justify-content-center border-bottom pb-4 mb-3">
-            <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2" style="color: black;">Features</a></li>
-            <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 "style="color: black;">FAQs</a></li>
-            <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2"style="color: black;">About</a></li>
+            <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2"
+                    style="color: black;">Features</a></li>
+            <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 " style="color: black;">FAQs</a>
+            </li>
+            <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2" style="color: black;">About</a>
+            </li>
         </ul>
         <p class="text-center text-white">© 2021 PostSense, Inc.</p>
     </footer>
@@ -72,4 +133,5 @@
     <script src="./profile.js"></script>
 
 </body>
+
 </html>
