--- a/footpages/faq.html
+++ b/footpages/faq.html
@@ -27,24 +27,25 @@
 </head>
 
 <body>
-  
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container" id="nav">
         <a class="navbar-brand" href="../postspage/index.html" style="margin-left: 2%;"><img
-            src="../images/snapik2 (2).png" style="height: 60px;">PostSense</a>
+                src="../images/snapik2 (2).png" style="height: 60px;">PostSense</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="../postspage/index.html">Post Feed</a>
+                <a class="nav-item nav-link active" href="../index.html">Home</a>
 
             </div>
         </div>
 
         <form class="form-inline d-flex" role="search">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-sm my-2 my-sm-0" type="submit" style="margin-right: 10%; color: white;" >Search</button>
+            <button class="btn btn-sm my-2 my-sm-0" type="submit"
+                style="margin-right: 10%; color: white;">Search</button>
         </form>
 
         <button class="btn btn-sm btn-outline-primary my-2 my-sm-0" type="submit" style="margin-right: 2%;"
@@ -52,13 +53,69 @@
 
     </nav>
 
-    <div class="d-flex justify-content-center container"><img src="../images/sm2.jpg" style="width: 500px;"></div>
+    <div class="container">
+        <p>
+            <div class="d-flex justify-content-center container"> <h2>Safety FAQ Sheet for <b>PostSense</b> <br><br></h2></div>
+
+            <b>**1. How does PostSense protect my privacy?**</b><br>
+            [Your PostSense takes your privacy seriously. We employ encryption protocols to secure your personal
+            information and adhere to strict privacy policies. You control what information you share and with whom.<br><br>
+
+            <b> **2. What measures does PostSense have in place to prevent unauthorized access to my account?**</b>
+            We use strong authentication methods, such as two-factor authentication (2FA), to protect your account.
+            Regular security audits and updates ensure our systems are secure against threats.<br><br>
+
+            <b> **3. How does PostSense handle cyberbullying and harassment?**</b> <br>
+            [Your PostSense has strict community guidelines prohibiting cyberbullying, harassment, and hate speech. Users
+            can report abusive behavior, and our moderation team promptly investigates and takes action.<br>
+
+            <b>  **4. What steps can I take to enhance my account's security on PostSense?**</b><br>
+            - Choose a strong, unique password and enable two-factor authentication (2FA). <br>
+            - Be cautious of phishing attempts and only click on links from trusted sources. <br>
+            - Regularly review your account settings and privacy options.<br><br>
+
+            <b> **5. How does PostSense ensure content safety and moderation?**</b><br>
+            We employ automated tools and human moderators to monitor content. Posts violating our community guidelines
+            are promptly removed, and repeat offenders may face account suspension or banning.<br><br>
+
+            <b> **6. What should I do if I encounter inappropriate content or behavior on PostSense?**</b><br>
+            Please report any inappropriate content or behavior using our reporting tools. Our moderation team will
+            investigate promptly and take appropriate action.<br><br>
+
+            <b> **7. How does PostSense protect minors using the platform?**</b><br>
+            We have specific safety measures for users under 18, including privacy settings that limit visibility and
+            interaction with adults. Parents can also set parental controls and monitor their children's activity.<br><br>
+
+            <b>**8. How does PostSense handle data security and compliance with regulations?**</b><br>
+            We comply with data protection laws and regulations like GDPR and CCPA. Your data is stored securely, and we
+            regularly review our practices to ensure compliance and security.<br><br>
+
+            <b>**9. What are PostSense's policies regarding fake accounts and impersonation?**</b><br>
+            Creating fake accounts or impersonating others is strictly prohibited. We verify accounts where necessary
+            and take action against fake profiles reported by users.<br><br>
+
+            <b>**10. How can I contact PostSense for further assistance or to report a concern?**</b><br>
+            You can reach our support team through [contact information]. For urgent matters related to safety or
+            security, please use our dedicated reporting channels.<br><br>
+
+            ---
+
+
+        </p>
+    </div>
+
+
+
+
 
     <footer class="py-3 my-4" id="footer">
         <ul class="nav justify-content-center border-bottom pb-4 mb-3">
-            <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2" style="color: black;">Features</a></li>
-            <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 "style="color: black;">FAQs</a></li>
-            <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2"style="color: black;">About</a></li>
+            <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2"
+                    style="color: black;">Features</a></li>
+            <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 " style="color: black;">FAQs</a>
+            </li>
+            <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2" style="color: black;">About</a>
+            </li>
         </ul>
         <p class="text-center text-white">© 2021 PostSense, Inc.</p>
     </footer>
@@ -72,4 +129,5 @@
     <script src="./profile.js"></script>
 
 </body>
+
 </html>
