--- a/footpages/features.html
+++ b/footpages/features.html
@@ -29,21 +29,22 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container" id="nav">
         <a class="navbar-brand" href="../postspage/index.html" style="margin-left: 2%;"><img
-            src="../images/snapik2 (2).png" style="height: 60px;">PostSense</a>
+                src="../images/snapik2 (2).png" style="height: 60px;">PostSense</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="../postspage/index.html">Post Feed</a>
+                <a class="nav-item nav-link active" href="../index.html">Home</a>
 
             </div>
         </div>
 
         <form class="form-inline d-flex" role="search">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-sm my-2 my-sm-0" type="submit" style="margin-right: 10%; color: white;" >Search</button>
+            <button class="btn btn-sm my-2 my-sm-0" type="submit"
+                style="margin-right: 10%; color: white;">Search</button>
         </form>
 
         <button class="btn btn-sm btn-outline-primary my-2 my-sm-0" type="submit" style="margin-right: 2%;"
@@ -52,14 +53,87 @@
 
     </nav>
 
-    <div class="d-flex justify-content-center container"><img src="../images/sm.jpg" style="width: 500px;"></div>
+    <div class="container"><p>
+        <h2>Features</h2> <br>
+
+        Creating a robust social media page involves incorporating
+        various features that enhance user engagement, interaction, and content discovery. Here are some essential
+        features you might consider implementing: <br><br>
+
+       <b> Profile Customization:</b><br>
+
+        Allow users to upload profile pictures, cover photos, and personalize their bio.
+        Provide options to link other social media accounts or websites.
+        <b> News Feed:</b><br>
+
+        Display a customizable feed where users can see posts from people they follow.
+        Include options to filter the feed by different criteria (e.g., most recent, popular).<br><br>
+        <b>  Post Creation and Sharing:</b><br>
+
+        Enable users to create text posts, share photos, videos, and links.
+        Support for hashtags and tagging other users in posts.<br><br>
+        <b> Likes, Comments, and Shares:</b><br>
+
+        Allow users to react to posts with likes or other emojis.
+        Enable commenting on posts to facilitate discussions.
+        Include sharing options to repost content to their own profile or other platforms.<br><br>
+        <b>  Messaging and Chat:</b><br>
+
+        Implement a messaging feature for private conversations between users.
+        Group chat functionality for multiple users to communicate together.<br><br>
+        <b> Notifications:</b><br>
+
+        Notify users about new likes, comments, shares, and messages.
+        Allow customization of notification preferences (e.g., email notifications).<br><br>
+        <b> Search and Discovery:</b><br>
+
+        Include a search bar for users to find other users, posts, or topics of interest.
+        Provide curated content suggestions or trending topics for discovery.<br><br>
+        <b> Privacy and Security Settings:</b><br>
+
+        Offer robust privacy controls for who can view and interact with their posts.
+        Allow users to block or report inappropriate content or users.<br><br>
+        <b> Analytics and Insights:</b><br>
+
+        Provide users with analytics on their posts' performance (e.g., views, engagement).
+        Insights into their follower demographics and growth over time.<br><br>
+        <b>  Events and Groups:</b><br>
+
+        Enable users to create and join events or groups based on interests or communities.
+        Facilitate event RSVPs, discussions, and group activities.<br><br>
+        <b>Live Streaming and Stories:</b><br>
+
+        Integrate live streaming features for real-time interaction with followers.
+        Implement stories or ephemeral posts that disappear after 24 hours.<br><br>
+        <b>  Monetization Options:</b><br>
+
+        Offer advertising opportunities for businesses to promote their products or services.
+        Provide monetization features for content creators (e.g., subscriptions, tips).<br><br>
+        <b>  Accessibility Features: </b><br>
+
+        Ensure the platform is accessible to users with disabilities (e.g., screen reader compatibility, color contrast
+        adjustments).<br><br>
+        <b> Support and Help Center: </b> <br>
+
+        Include a comprehensive help center or FAQ section to assist users with common issues.
+        Offer customer support through multiple channels (e.g., email, chat).<br><br>
+        <b> Integration with Other Platforms:</b><br>
+
+        Allow users to share their social media posts on other platforms (e.g., Facebook, Twitter).
+        Integrate with third-party apps or services (e.g., photo editing tools, music streaming).
+        By incorporating these features, you can create a dynamic and engaging social media page that attracts users and
+        encourages active participation within your community. Adjust these features based on your platform's specific
+        goals and target audience preferences.</p></div>
 
 
     <footer class="py-3 my-4" id="footer">
         <ul class="nav justify-content-center border-bottom pb-4 mb-3">
-            <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2" style="color: black;">Features</a></li>
-            <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 "style="color: black;">FAQs</a></li>
-            <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2"style="color: black;">About</a></li>
+            <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2"
+                    style="color: black;">Features</a></li>
+            <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 " style="color: black;">FAQs</a>
+            </li>
+            <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2" style="color: black;">About</a>
+            </li>
         </ul>
         <p class="text-center text-white">© 2021 PostSense, Inc.</p>
     </footer>
@@ -72,6 +146,7 @@
         crossorigin="anonymous"></script>
     <script src="./profile.js"></script>
 
-    
+
 </body>
+
 </html>
