--- a/postspage/index.html
+++ b/postspage/index.html
@@ -58,8 +58,8 @@
         <div id="page-container" class="container 20px h-100">
             <div id="content-wrap">
                 <div class="d-flex justify-content-center"> <a href="./index.html"><img
-                            src="../images/blacksnaptic (1).png" style="height: 70px;"></a> </div>
-                <center>PostSense</center><br><br>
+                            src="../images/blacksnaptic (1).png" style="height: 70px; margin-top: 10px;"></a> </div>
+                <p style="text-align: center; font-size: 25px; margin-bottom: -5%;">PostSense</p><br><br>
 
 
                 <h4 style="margin-left: 10%;">See what's happening.</h4>
