--- a/profile/profile.html
+++ b/profile/profile.html
@@ -71,7 +71,7 @@
                         <div>
                             <h6 style="margin-top: 3%; margin-bottom: 2%;">Post something.</h6>
                             <label for="text"></label>
-                            <textarea type="text" id="postPlace" name="text" value="" placeholder="What's up?"
+                            <textarea type="text" id="postPlace" name="text" value="" max="280" placeholder="What's up?"
                                 style="width:100%;"></textarea>
                         </div>
                         <button class="btn btn-sm btn-outline-primary  mt-3 mb-3 " style="width: 25%; margin-left: 75%;"
