--- a/footpages/about.html
+++ b/footpages/about.html
@@ -59,7 +59,7 @@
 
         <b>Overview: </b><br>
         PostSense is a dynamic microblogging platform designed for users to share short-form content and engage in
-        real-time discussions. Whether you're sharing thoughts, photos, videos, or links, [Microblogging Platform Name]
+        real-time discussions. Whether you're sharing thoughts, photos, videos, or links, PostSense
         empowers users to express themselves and connect with others in a concise and meaningful way. <br><br>
 
         <b>b>Key Features:</b><br>
@@ -69,7 +69,7 @@
 
         <b>Visual Sharing:</b><br> Share photos, GIFs, and short videos to complement your posts and capture moments in real-time.<br><br>
 
-        <b>eal-time Updates:</b> <br>Stay connected with instant updates from people you follow. See what's happening as it
+        <b>Real-time Updates:</b> <br>Stay connected with instant updates from people you follow. See what's happening as it
         unfolds.<br><br>
 
         <b> Hashtags and Trends:</b><br> Discover and participate in trending topics with hashtags. Explore diverse interests and
