--- a/postspage/index.html
+++ b/postspage/index.html
@@ -43,7 +43,7 @@
         </div>
         
         <form  method="get" action="https://www.google.com/search " class="form-inline d-flex" role="search">
-            <input class="form-control mr-sm-2" type="text" name="q" aria-label="Search" placeholder="Search" value="">
+            <input class="form-control mr-sm-2" type="text" name="q" aria-label="Search" placeholder="Search the Web" value="">
             <button class="btn btn-sm my-2 my-sm-0" type="submit" style="margin-right: 10%;">Search</button>
         </form>
 
